--- a/index.html
+++ b/index.html
@@ -1,47 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="teletomo" class="h-100">
+<html lang="en" ng-app="teletomo" class="h-100" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/brands.min.css">
+
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
 
-    <script src="node_modules/angular/angular.min.js"></script>
+    <!-- Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+    <script src="//unpkg.com/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
+
+    <link rel="stylesheet" href="style.css">
+
+    <base href="/">
     <script src="index.js"></script>
+    <script src="components/home/home.js"></script>
+    <script src="components/billing/billing.js"></script>
+    <script src="components/email/email.js"></script>
+    <script src="components/inventory/inventory.js"></script>
+    <script src="components/sms/sms.js"></script>
+    <script src="components/voicemail/voicemail.js"></script>
     <title>Teletomo</title>
 </head>
 
-<body ng-controller="IndexController" class="h-100">
-    <div class="container py-3 bg-light h-100">
-        <h1>Teletomo</h1>
-        <form class="w-50">
-            <h5 class="my-2">Send a message:</h5>
-            <div class="form-floating mb-3">
-                <select class="form-select" id="destination" ng-model="destinations.selected">
-                    <option value="" disabled>Select a destination</option>
-                    <option ng-repeat="ep in destinations.endpoints" value="{{ep}}">{{ toTitleCase(ep) }}</option>
-                </select>
-                <label for="destination">Destination</label>
+<body class="h-100 d-flex flex-column">
+    <header class="custom bg-accent mb-auto" data-bs-theme="light">
+        <nav class="container-md navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" ui-sref="home">Teletomo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-inner"
+                    aria-controls="navbar-inner" aria-expanded="false" aria-label="Toggle navigation bar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar-inner">
+                    <div class="navbar-nav">
+                        <a class="nav-link" ui-sref="billing" ui-sref-active="active">Billing</a>
+                        <a class="nav-link" ui-sref="email" ui-sref-active="active">Email</a>
+                        <a class="nav-link" ui-sref="inventory" ui-sref-active="active">Inventory</a>
+                        <a class="nav-link" ui-sref="sms" ui-sref-active="active">Sms</a>
+                        <a class="nav-link" ui-sref="voicemail" ui-sref-active="active">Voicemail</a>
+                    </div>
+                </div>
             </div>
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" placeholder="Message" id="msg" ng-model="msg">
-                <label for="msg">Message</label>
+        </nav>
+    </header>
+    <ui-view class="container-md flex-grow-1 my-2"></ui-view>
+    <footer class="mt-auto text-body bg-body border-top border-secondary" data-bs-theme="dark">
+        <div class="container-lg">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+                <div>
+                    <div class="display-4 text-muted">Teletomo</div>
+                    <small class="text-muted">© Teletomo 2023 all rights reserved</small>
+                </div>
+                <ul class="nav flex-column">
+                    <li class="nav-item"><a href="#" class="nav-link link-secondary">Help &amp; Support</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link link-secondary">Terms &amp; Conditions</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link link-secondary">Privacy policy</a></li>
+                </ul>
+                <div>
+                    <div class="fs-5 ps-2 text-muted">Follow us on</div>
+                    <div class="d-flex py-2">
+                        <span><a href="#" class="fg-accent"><i class="fs-4 px-2 fa-brands fa-facebook"></a></i></span>
+                        <span><a href="#" class="fg-accent"><i class="fs-4 px-2 fa-brands fa-twitter"></a></i></span>
+                        <span><a href="#" class="fg-accent"><i class="fs-4 px-2 fa-brands fa-instagram"></a></i></span>
+                    </div>
+                </div>
             </div>
-            <button class="btn btn-primary mb-3" ng-click="sendMessage()">send</button>
-
-            <div class="form-floating">
-                <textarea class="form-control" placeholder="Response" id="response" disabled style="height: 15vh">{{response}}</textarea>
-                <label for="response">Response</label>
-            </div>
-        </form>
-    </div>
+        </div>
+    </footer>
 </body>
 
 </html>
