--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <script src="components/voicemail/voicemail.js"></script>
     <script src="components/header/header.js"></script>
     <script src="components/footer/footer.js"></script>
+
+    <script src="services/email/emailService.js"></script>
     <title>Teletomo</title>
 </head>
 
