--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="components/home/home.js"></script>
     <script src="components/billing/billing.js"></script>
     <script src="components/email/email.js"></script>
+    <script src="components/emailDetail/emailDetail.js"></script>
     <script src="components/inventory/inventory.js"></script>
     <script src="components/sms/sms.js"></script>
     <script src="components/voicemail/voicemail.js"></script>
