--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body class="h-100 d-flex flex-column">
-    <header class="custom bg-accent mb-auto" data-bs-theme="light">
+    <header class="custom bg-accent mb-auto sticky-top" data-bs-theme="light">
     </header>
     <ui-view class="container-md flex-grow-1 my-2"></ui-view>
     <footer class="text-body bg-body border-top border-secondary" data-bs-theme="dark">
